# samplecodes

./: .gitignore  rbuild.sh
gdb.python/: simplecmd.py  stackfold.py  zcmd.py
graph/: graph1.gv  graph2.gv  linearRegression.gv  pollset.gv
kubenetes/: Dockerfile  kfcluster-cfg.yaml  mycluster-cfg.yaml  mysql-rc.yaml  mysql-svc.yaml  myweb-rc.yaml  myweb-svc.yaml  samples-ns.yaml  server.js
rpmProjects/: build.sh
rpmProjects/hello/: hello1-1.0.tar.Z
rpmProjects/hello1-1.0/: hello.spec  makefile
rpmProjects/helloso/: helloso.spec  helloso2-2.0.tar.Z
rpmProjects/rpath/: makefile  world.c  zg.spec
src_C/: #include <stdio.h>  CPoint.cpp  DuoBianXing.cpp  DuoBianXing.h  FreeArray.C  FreeArray.H  HeapNew.cpp  Hello.cpp  Hello.exp.txt  Hello.h  Hello1.C  Hello1.h  JiSuanMianJi.cpp  Makefile  People.cpp  People.h  UnixFileSystem_md.c  ZhengFangXing.cpp  ZhengFangXing.h  a.c  address.c  address.cpp  alloc.c  apue.t.g  arrayconstruction.cpp  basepointer.cpp  beam.cpp  beam.lst  beam.s  bug2main.cpp  callpase2.c  callso.c  callzero.c  cast.cpp  charsequal.c  checknofollow.c  classmember.cpp  clock.c  constructor.cpp  dcast.cpp  (+123 more)
src_C/CDemoCodes/: HW.c  (+79 more)
src_C/cmake.samples/cmake02/: CMakeLists.txt  cmake.log.0409.txt  world.h
src_C/ibmirpm/helloso/helloso2-2.0/: CMakeLists.txt  makefile2  makefilei
src_as/: Makefile  bochsrc  func1.c  func1.s  hello.c  hello.s.1  hello.s.linux  main.c  main.s  test.c
src_cmake/: CMakeLists.txt  hello.cpp
src_cmake/findpackage/: CMakeLists.txt  Hello.h.in
src_cmake/tutorial/step1/: CMakeLists.txt  Tutorial.cxx
src_cmake/tutorial/step1/MathFunctions/: MathFunctions.h  mysqrt.cxx
src_cuda/: cudatest.cu
src_go/: Dockerfile  app.go  package_example.go  pointer.go  threads.go
src_java/: AESTest.java  AESTest1.java  CPConvert.java  CheckExtDir.java  Consumer.java  Convert.java  Crash.java  Crash2.java  CreateTemp.java  CurrentMillis.java  Deadlock copy.java  DefaultCS.java  DividTest.java  EHAunitThread.java  Except.java  FileCheck.java  FixDataXMLUtilities.java  GCInformation.java  GenerateIDs.java  HW.java  HelloW.java  HelloWorld.java  HighCPU.java  JNITest.h  JNITest.java  ListProviders.java  LoadLibrary.java  LongWait.java  MbeanTest.java  MilliTime.java  MyLevel.java  MyLog.java  PrintFirstParm.java  PrintParms.java  ProducerConsumerExample.java  ReadFile.java  ReqFix.java  ReqFixCommandLineDriver.java  ReqFixInfo.java  ReqFixSyntax.java  (+47 more)
src_js/: HelloWorld.js  a.txt  jstest.js  wastonconv.js
src_m4/: hello.m4  jilvalues.m4  sample2.m4  sample3.m4  sample4.m4  sample5.m4
src_make/: Makefile
src_ml/: Untitled.ipynb
src_perl/: demo.pl  matchtest.pl
src_python/: Untitled.ipynb  a.c  a.sql  asc  dir.py  filetest.py  fromdb.xlsx  generatepatch.py  hello.py  helloworld.ipynb  mlhello.py  mplfig.py  my_module.pt  mytest.ipynb  p103.cnn.py  p124.rnn.py  p35linearRegression.py  p45.doitbycoding.py  pasegenpatch.py  patchfiles.py  plot.py  pyt1.py  pytorch.build.linux.sh  runsql.py  scripting.ipynb  shushi.py  skl01.py  skl06.py  skl08.py  svcclassify.pkl  tftest.py  tftest2.py  tftest3.pl  tftest4.py  torch.add.py  tpot_exported_pipeline.py  tpottest2.py  urlread.py  wordnet.pain.py  zcmd2.py  (+3 more)
src_pytorch/: FashionMNIST.ipynb  Untitled.ipynb  chapter_linear-networks  data  nohup.out  pytorch.线性回归.ipynb  softmax-regression-concise.ipynb  softmax-regression-scratch.ipynb  手工线性回归-v2.ipynb  手工线性回归.ipynb
src_sh/: buildpytorch.sh  z.sh
src_sql/: mysql.sql
(+967 files in other folders)
