cmake_minimum_required(VERSION 3.0)
project(MYTEST)
MESSAGE(STATUS "This is BINARY dir " ${MYTEST_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${MYTEST_SOURCE_DIR})
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
set ( CMAKE_C_IMPLICIT_LINK_DIRECTORIES "")
set ( CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "")
set ( CMAKE_VERBOSE_MAKEFILE true )
set(APP_SRC test.c)
set(LIBHELLO_SRC hello.c)
set(LIBWORLD_SRC world.c)
add_library(world SHARED ${LIBWORLD_SRC})
add_library(hello SHARED ${LIBHELLO_SRC})
add_executable(mytest ${APP_SRC})
set_target_properties(world PROPERTIES COMPILE_FLAGS "-DZG=1 -pthread")
set_target_properties(mytest PROPERTIES COMPILE_FLAGS "-DZG=2 -pthread")

target_link_libraries(hello world)
target_link_libraries(mytest hello)
install( TARGETS mytest DESTINATION bin)
install( TARGETS hello DESTINATION lib)
install( TARGETS world DESTINATION lib)
install( FILES world.h DESTINATION include)
